--- a/v0.9.0/_modules/merlin/systems/triton.html
+++ b/v0.9.0/_modules/merlin/systems/triton.html
@@ -110,7 +110,7 @@
 
 
 <div class="viewcode-block" id="convert_df_to_triton_input"><a class="viewcode-back" href="../../../generated/merlin.systems.triton.convert_df_to_triton_input.html#merlin.systems.triton.convert_df_to_triton_input">[docs]</a><span class="k">def</span> <span class="nf">convert_df_to_triton_input</span><span class="p">(</span><span class="n">schema</span><span class="p">,</span> <span class="n">batch</span><span class="p">,</span> <span class="n">input_class</span><span class="o">=</span><span class="n">grpcclient</span><span class="o">.</span><span class="n">InferInput</span><span class="p">,</span> <span class="n">dtype</span><span class="o">=</span><span class="s2">&quot;int32&quot;</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Convert a dataframe to a set of Triton inputs</span>
 
 <span class="sd">    Parameters</span>
@@ -173,7 +173,7 @@
 
 
 <div class="viewcode-block" id="convert_triton_output_to_df"><a class="viewcode-back" href="../../../generated/merlin.systems.triton.convert_triton_output_to_df.html#merlin.systems.triton.convert_triton_output_to_df">[docs]</a><span class="k">def</span> <span class="nf">convert_triton_output_to_df</span><span class="p">(</span><span class="n">columns</span><span class="p">,</span> <span class="n">response</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Convert a Triton response to a dataframe</span>
 
 <span class="sd">    Parameters</span>
@@ -192,7 +192,7 @@
 
 
 <span class="k">def</span> <span class="nf">get_column_types</span><span class="p">(</span><span class="n">path</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Load column types from a JSON file</span>
 
 <span class="sd">    Parameters</span>
