--- a/v0.5.0/_modules/merlin/systems/dag/ops/operator.html
+++ b/v0.5.0/_modules/merlin/systems/dag/ops/operator.html
@@ -95,7 +95,7 @@
 
 <div class="viewcode-block" id="InferenceDataFrame"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.operator.InferenceDataFrame.html#merlin.systems.dag.ops.operator.InferenceDataFrame">[docs]</a><span class="k">class</span> <span class="nc">InferenceDataFrame</span><span class="p">:</span>
 <div class="viewcode-block" id="InferenceDataFrame.__init__"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.operator.InferenceDataFrame.html#merlin.systems.dag.ops.operator.InferenceDataFrame.__init__">[docs]</a>    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">tensors</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        This is a dictionary that has a set of key (column name) and value (tensor)</span>
 
 <span class="sd">        Parameters</span>
@@ -127,7 +127,7 @@
 
 
 <span class="k">class</span> <span class="nc">InferenceOperator</span><span class="p">(</span><span class="n">BaseOperator</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    The basic building block of the Inference Node, the Inference Operator encapsulates</span>
 <span class="sd">    a transform with the appropriate functionality to handle all Ensemble graph</span>
 <span class="sd">    operations.</span>
@@ -135,7 +135,7 @@
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">export_name</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Provides a clear common english identifier for this operator.</span>
 
 <span class="sd">        Returns</span>
@@ -155,7 +155,7 @@
         <span class="n">node_id</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
         <span class="n">version</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Export the class object as a config and all related files to the user defined path.</span>
 
 <span class="sd">        Parameters</span>
@@ -182,7 +182,7 @@
 <span class="sd">        &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">create_node</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">selector</span><span class="p">:</span> <span class="n">ColumnSelector</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">InferenceNode</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;_summary_</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;_summary_</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
@@ -198,7 +198,7 @@
 
     <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">from_model_registry</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">registry</span><span class="p">:</span> <span class="n">ModelRegistry</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;InferenceOperator&quot;</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Loads the InferenceOperator from the provided ModelRegistry.</span>
 
 <span class="sd">        Parameters</span>
@@ -218,7 +218,7 @@
 
     <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">from_path</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">path</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;InferenceOperator&quot;</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Loads the InferenceOperator from the path where it was exported after training.</span>
 
 <span class="sd">        Parameters</span>
@@ -237,7 +237,7 @@
 
 
 <span class="k">class</span> <span class="nc">PipelineableInferenceOperator</span><span class="p">(</span><span class="n">InferenceOperator</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    This Inference operator type builds on the base infrence operator, by allowing</span>
 <span class="sd">    chains of sequential pipelineable inference operators to be executed inside the</span>
 <span class="sd">    same model. This remove tritonserver overhead between operators of this type.</span>
@@ -246,7 +246,7 @@
     <span class="nd">@classmethod</span>
     <span class="nd">@abstractmethod</span>
     <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">:</span> <span class="nb">dict</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Instantiate a class object given a config.</span>
 
 <span class="sd">        Parameters</span>
@@ -265,7 +265,7 @@
 
     <span class="nd">@abstractmethod</span>
     <span class="k">def</span> <span class="nf">transform</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">df</span><span class="p">:</span> <span class="n">InferenceDataFrame</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">InferenceDataFrame</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;Transform the dataframe by applying this operator to the set of input columns</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Transform the dataframe by applying this operator to the set of input columns</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        -----------</span>
@@ -288,7 +288,7 @@
         <span class="n">version</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
         <span class="n">backend</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;python&quot;</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Export the class object as a config and all related files to the user-defined path.</span>
 
 <span class="sd">        Parameters</span>
