--- a/main/genindex.html
+++ b/main/genindex.html
@@ -77,7 +77,6 @@
  <a href="#_"><strong>_</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -143,37 +142,11 @@
   </ul></td>
 </tr></table>
 
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.export">export() (merlin.systems.dag.ops.session_filter.FilterCandidates method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.export">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.export">(merlin.systems.dag.ops.unroll_features.UnrollFeatures method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit.exportable_backends">exportable_backends() (merlin.systems.dag.ops.implicit.PredictImplicit property)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates">FilterCandidates (class in merlin.systems.dag.ops.session_filter)</a>
 </li>
-      <li><a href="generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.from_config">from_config() (merlin.systems.dag.ops.session_filter.FilterCandidates class method)</a>
-
-      <ul>
-        <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.from_config">(merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling class method)</a>
-</li>
-        <li><a href="generated/merlin.systems.dag.ops.unroll_features.UnrollFeatures.html#merlin.systems.dag.ops.unroll_features.UnrollFeatures.from_config">(merlin.systems.dag.ops.unroll_features.UnrollFeatures class method)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -195,6 +168,10 @@
 
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/merlin.systems.dag.ops.implicit.PredictImplicit.html#merlin.systems.dag.ops.implicit.PredictImplicit.save_artifacts">save_artifacts() (merlin.systems.dag.ops.implicit.PredictImplicit method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling.html#merlin.systems.dag.ops.softmax_sampling.SoftmaxSampling">SoftmaxSampling (class in merlin.systems.dag.ops.softmax_sampling)</a>
 </li>
