--- a/main/_modules/merlin/systems/dag/ops/session_filter.html
+++ b/main/_modules/merlin/systems/dag/ops/session_filter.html
@@ -88,8 +88,6 @@
 <span class="c1"># limitations under the License.</span>
 <span class="c1">#</span>
 
-<span class="kn">import</span> <span class="nn">json</span>
-
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>
@@ -123,25 +121,6 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_input_col</span> <span class="o">=</span> <span class="n">input_col</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_filter_out_col</span> <span class="o">=</span> <span class="n">filter_out</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">()</span></div>
-
-<div class="viewcode-block" id="FilterCandidates.from_config"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.from_config">[docs]</a>    <span class="nd">@classmethod</span>
-    <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;FilterCandidates&quot;</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Instantiate a class object given a config.</span>
-
-<span class="sd">        Parameters</span>
-<span class="sd">        ----------</span>
-<span class="sd">        config : dict</span>
-
-
-<span class="sd">        Returns</span>
-<span class="sd">        -------</span>
-<span class="sd">            Class object instantiated with config values</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">parameters</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">loads</span><span class="p">(</span><span class="n">config</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;params&quot;</span><span class="p">,</span> <span class="s2">&quot;&quot;</span><span class="p">))</span>
-        <span class="n">filter_out_col</span> <span class="o">=</span> <span class="n">parameters</span><span class="p">[</span><span class="s2">&quot;filter_out_col&quot;</span><span class="p">]</span>
-        <span class="n">input_col</span> <span class="o">=</span> <span class="n">parameters</span><span class="p">[</span><span class="s2">&quot;input_col&quot;</span><span class="p">]</span>
-        <span class="k">return</span> <span class="n">FilterCandidates</span><span class="p">(</span><span class="n">filter_out_col</span><span class="p">,</span> <span class="n">input_col</span><span class="p">)</span></div>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">dependencies</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -255,48 +234,7 @@
         <span class="n">filter_ids</span> <span class="o">=</span> <span class="n">transformable</span><span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_filter_out_col</span><span class="p">]</span>
 
         <span class="n">filtered_results</span> <span class="o">=</span> <span class="n">candidate_ids</span><span class="o">.</span><span class="n">values</span><span class="p">[</span><span class="o">~</span><span class="n">np</span><span class="o">.</span><span class="n">isin</span><span class="p">(</span><span class="n">candidate_ids</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="n">filter_ids</span><span class="o">.</span><span class="n">values</span><span class="p">)]</span>
-        <span class="k">return</span> <span class="nb">type</span><span class="p">(</span><span class="n">transformable</span><span class="p">)({</span><span class="s2">&quot;filtered_ids&quot;</span><span class="p">:</span> <span class="n">filtered_results</span><span class="p">})</span></div>
-
-<div class="viewcode-block" id="FilterCandidates.export"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.session_filter.FilterCandidates.html#merlin.systems.dag.ops.session_filter.FilterCandidates.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span>
-        <span class="n">path</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-        <span class="n">input_schema</span><span class="p">:</span> <span class="n">Schema</span><span class="p">,</span>
-        <span class="n">output_schema</span><span class="p">:</span> <span class="n">Schema</span><span class="p">,</span>
-        <span class="n">params</span><span class="p">:</span> <span class="nb">dict</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-        <span class="n">node_id</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-        <span class="n">version</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
-        <span class="n">backend</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;ensemble&quot;</span><span class="p">,</span>
-    <span class="p">):</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Export the class object as a config and all related files to the user defined path.</span>
-
-<span class="sd">        Parameters</span>
-<span class="sd">        ----------</span>
-<span class="sd">        path : str</span>
-<span class="sd">            Artifact export path</span>
-<span class="sd">        input_schema : Schema</span>
-<span class="sd">            A schema with information about the inputs to this operator</span>
-<span class="sd">        output_schema : Schema</span>
-<span class="sd">            A schema with information about the outputs of this operator</span>
-<span class="sd">        params : dict, optional</span>
-<span class="sd">            Parameters dictionary of key, value pairs stored in exported config, by default None</span>
-<span class="sd">        node_id : int, optional</span>
-<span class="sd">            The placement of the node in the graph (starts at 1), by default None</span>
-<span class="sd">        version : int, optional</span>
-<span class="sd">            The version of the model, by default 1</span>
-
-<span class="sd">        Returns</span>
-<span class="sd">        -------</span>
-<span class="sd">        Ensemble_config: dict</span>
-<span class="sd">        Node_configs: list</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">params</span> <span class="o">=</span> <span class="n">params</span> <span class="ow">or</span> <span class="p">{}</span>
-        <span class="n">self_params</span> <span class="o">=</span> <span class="p">{</span>
-            <span class="s2">&quot;input_col&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_input_col</span><span class="p">,</span>
-            <span class="s2">&quot;filter_out_col&quot;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_filter_out_col</span><span class="p">,</span>
-        <span class="p">}</span>
-        <span class="n">self_params</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">params</span><span class="p">)</span>
-        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">export</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="n">input_schema</span><span class="p">,</span> <span class="n">output_schema</span><span class="p">,</span> <span class="n">self_params</span><span class="p">,</span> <span class="n">node_id</span><span class="p">,</span> <span class="n">version</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="nb">type</span><span class="p">(</span><span class="n">transformable</span><span class="p">)({</span><span class="s2">&quot;filtered_ids&quot;</span><span class="p">:</span> <span class="n">filtered_results</span><span class="p">})</span></div></div>
 </pre></div>
 
            </div>
